# C_learn

./: .ccls  .clang-format  .clang-tidy  .editorconfig  .gdb_history  .gitignore  .gn  .vimspector.json  1.py  BUILD.gn  README  README.md  compile_commands.json  lock  main.c  main1.c  makefile  setsid.sh  xmake.lua
aio_learn/: BUILD.gn  aio_learn.c  aio_learn.h  aio_read.c  aio_read_test.c  aio_suspend.c  aio_suspend_test.c  aio_write.c  aio_write_test.c  demo.c  lio_listio.c  lio_listio_test.c  main.c  xmake.lua
arpa_inet_learn/: BUILD.gn  argp_inet_learn.c  argp_inet_learn.h  inet_addr.c  inet_addr_test.c  inet_aton.c  inet_aton_test.c  inet_ntoa.c  inet_ntoa_test.c  inet_ntop.c  inet_ntop_test.c  xmake.lua
fcntl_learn/: BUILD.gn  FD_CLOEXEC_test.c  F_WRLCK_test.c  O_CLOEXEC_test.c  creat_test.c  creat_test1.c  fallocate_test.c  fcntl.md  fcntl_F_WRLCK_test.c  fcntl_learn.c  fcntl_learn.h  fcntl_test.c  file_flags.c  open.md  open1_test.c  open2_test.c  open_3_test.c  open_4_test.c  open_5_test.c  open_6_test.c  open_test.c  splice.md  splice1_test.c  splice_test.c  ssh1_test.c  ssh2_test.c  tee_test.c  xmake.lua
fuse_learn/: BUILD.gn  README.md  fuse_learn.c  fuse_learn.h  hello.c  simple_fuse.c  simple_fuse3.c  xmake.lua
gcc_learn/: BUILD.gn  FUNCTION_test.c  __GNUC__.c  __builtin_clz_test.c  __builtin_offsetof_test.c  __sync_.md  __sync_fetch_and_add.c  alias_learn.c  arch.c  arch.h  attribute1_test.c  attribute_test.c  destructor1_test.c  destructor_test.c  fcntl_learn.c  fcntl_learn.h  gcc_learn.c  gcc_learn.h  inline_main.c  weak_alias_learn.c
grammar/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  BUILD.gn  __VA_ARGS__.c  argv_test.c  argvs_test.c  arr_prt_test.c  arr_prt_test1.c  bool_test.c  cleanup_test.c  const_test.c  continue_test.c  define1_test.c  define_test.c  disassemble_test.c  do_while.c  do_while_test.c  enum_test.c  func_arr.c  grammar.c  grammar.h  hex_to_int.c  int_test.c  log_test.c  pg_summary_test.c  ptr1_test.c  ptr2_test.c  ptr3_test.c  ptr4_test.c  ptr5_test.c  ptr6_test.c  (+27 more)
grammar_learn/: 1.c  2.c  3.c  BUILD.gn  __VA_ARGS__.c  argv_test.c  arr_prt_test.c  bool_test.c  const_.c  continue_test.c  define_test.c  do_while.c  do_while_test.c  func_arr.c  int_test.c  long_int_test.c  pointer1_test.c  pointer2_test.c  pointer3_test.c  pointer_test.c  sizeof_test.c  static_test.c  struct1_test.c  struct2_test.c  struct_include_test.c  struct_pointer_test.c  struct_test.c  switch.c  test.c  test_.c  union_test.c
hello_word/: BUILD.gn  env_test.c  hello.c  helloworld1_test.c  helloworld2_test.c  helloworld_test.c
libudev_learn/: BUILD.gn  libudev_learn.c  libudev_learn.h  udev_enumerate_scan_devices_test.c  udev_monitor_receive_device_test.c  udev_new_test.c  xmake.lua
netdb_learn/: BUILD.gn  getaddrinfo.md  getaddrinfo1_test.c  getaddrinfo_test.c  gethostbyaddr_test.c  gethostbyname_test.c  getnameinfo1_test.c  getnameinfo_test.c  netdb_learn.c  netdb_learn.h
netlib/: BUILD.gn  acceptor.c  buffer.c  channel.c  epoll_dispatcher.c  event_loop.c  event_loop_thread.c  http_request.c  http_response.c  http_server.c  log.c  read.c  tcp_connection.c  tcp_server.c  thread_pool.c
openssl_learn/: AES_set_decrypt_key_test.c  AES_set_encrypt_key_test.c  BIO_new_file_test.c  BUILD.gn  EVP_MD_CTX_new_test.c  MD5_Final_test.c  MD5_Init_test.c  RSA_new_test.c  SHA1_Init_test.c  SHA1_test.c  SHA_Init_test.c  aes_test.c  prive_key.txt  public_key.txt
pthread_learn/: BUILD.gn  README.md  pthread_attr_init_test.c  pthread_attr_setinheritsched_test.c  pthread_barrier_destroy_test.c  pthread_barrier_init_test.c  pthread_cancel_test.c  pthread_cleanup_push.md  pthread_cleanup_push_test.c  pthread_cond_broadcast_test.c  pthread_cond_init_test.c  pthread_cond_signal_test.c  pthread_cond_wait_test.c  pthread_create1_test.c  pthread_create2_test.c  pthread_create3_test.c  pthread_create4_test.c  pthread_create5_test.c  pthread_create_test.c  pthread_exit_test.c  pthread_getname_np_test.c  pthread_getpecific_test.c  pthread_getspecific_test.c  pthread_join1_test.c  pthread_join_test.c  pthread_key_t_test.c  pthread_learn.c  pthread_learn.h  pthread_mutex_consistent_test.c  pthread_mutex_init_test.c  pthread_mutex_lock1_test.c  pthread_mutex_lock_test.c  pthread_mutex_timedlock_test.c  pthread_mutex_unlock_test.c  pthread_once_test.c  pthread_rwlock_init_test.c  pthread_rwlock_rdlock_test.c  pthread_rwlock_rdlock_test1.c  pthread_rwlock_rdlock_test2.c  pthread_rwlock_rdlock_test3.c  (+8 more)
redis_learn/: .gitignore  BUILD.gn
rocksdb_learn/: BUILD.gn  main.c  xmake.lua
sched_learn/: BUILD.gn  CLONE_NEWIPC_test.c  CLONE_NEWPID_test.c  CLONE_NEWUSER_test.c  CLONE_NEWUTS_test.c  CPU_CLR_test.c  CPU_ISSET_test.c  CPU_ZERO_test.c  clone1_test.c  clone_test.c  sched_setaffinity_test.c  setns_test.c
signal_learn/: BUILD.gn  SIGFPE_test.c  SIGKILL_test.c  SIG_IGN.md  SIG_IGN_test.c  kill_test.c  raise_test.c  sigaction1_test.c  sigaction_test.c  sigemptyset1_test.c  sigemptyset_test.c  signal.md  signal1_test.c  signal2_test.c  signal3_test.c  signal4_test.c  signal5_test.c  signal_learn.c  signal_learn.h  signal_test.c  sigprocmask.md  sigprocmask_test.c  sigsuspend_test.c  sigwait_test.c
sodium_learn/: BUILD.gn  crypto_aead_xchacha20poly1305_ietf_decrypt_detached_test.c  crypto_aead_xchacha20poly1305_ietf_encrypt_detached_test.c  crypto_aead_xchacha20poly1305_ietf_encrypt_test.c  crypto_pwhash_test.c  sodium_base642bin_test.c  sodium_bin2base64_test.c
stat_learn/: BUILD.gn  futimens_test.c  stat1_test.c  stat_test.c  umask_test.c
stdio_learn/: 1.c  BUILD.gn  STDERR_test.c  buf_test_bug.c  echo_pid.c  fdopen1_test.c  fdopen_test.c  feof.md  feof_test.c  fflush_test.c  fgetc_test.c  fgets.md  fgets1_test.c  fgets_test.c  fileno1_test.c  fileno_test.c  fopen.md  fopen1_test.c  fopen2_test.c  fopen_test.c  fread_test.c  fseek.c  fseek_test.c  fwrite_test.c  getc_test.c  getchar_test.c  getline_test.c  hex_str_To_hex.c  memstr.c  mkstemp.c  popen_close_test.c  popen_test.c  popen_w_test.c  print_test.c  print_time.c  putc_learn.c  putchar_test.c  rename_test.c  (+19 more)
(+4867 files in other folders)
