group("default"){
  deps = [
    "//sys_epoll_learn:test",

    "//arpa_inet_learn:inet_ntoa_test",
    "//arpa_inet_learn:inet_aton_test",
    "//arpa_inet_learn:inet_addr_test",

    "//gcc_learn:__builtin_clz_test",

    "//aio_learn:aio_read_test",
    "//aio_learn:aio_write_test",
    "//aio_learn:aio_suspend_test",
    "//aio_learn:lio_listio_test",

    "//grammar/macro:define_test",

    "//sys_signalfd_learn:signalfd_test",

    "//ev_learn:ev1_test",
    "//ev_learn:ev_signal_test",

    "//redis-3.0-annotated:redis",

    "//pthread_learn:pthread_mutex_lock_test",

    "//locale_learn:setlocale_test",

    "//sys_wait_learn:waitpid_test",

    "//hello_word:hello_word",
    "//hello_word:helloworld_test",
    "//hello_word:helloworld1_test",
    "//hello_word:helloworld2_test",
    "//hello_word:env_test",

    "//setjmp_learn:setjmp_test",
    "//setjmp_learn:longjmp_test",

    "//pipe_learn:pipe1",

    "//utsname_learn:uname_test",

    "//time_learn:localtime_test",
    "//time_learn:gettimeofday_test",

    "//pwd_learn:getpwent_test",

    "//shadow_learn:getspnam_test",

    "//string_learn:memset_test",

    "//stdlib_learn:getenv_test",
    "//stdlib_learn:mkstemp_test",
    "//stdlib_learn:atexit_test",
    "//stdlib_learn:system_test",
    "//stdlib_learn:system1_test",
    "//stdlib_learn:system2_test",
    "//stdlib_learn:system3_test",
    "//stdlib_learn:srand_test",

    "//unistd_learn:getpid_test",
    "//unistd_learn:read_test",
    "//unistd_learn:getuid_test",
    "//unistd_learn:lseek_test",
    "//unistd_learn:lseek1_test",
    "//unistd_learn:access_test",
    "//unistd_learn:chdir_test",
    "//unistd_learn:sysconf_test",
    "//unistd_learn:unlink_test",
    "//unistd_learn:fork_test",
    "//unistd_learn:fork1_test",
    "//unistd_learn:fork2_test",
    "//unistd_learn:execlp_test",
    "//unistd_learn:execl_test",
    "//unistd_learn:fork3_test",
    # "//unistd_learn:getcwd_test",
    "//unistd_learn:fork4_test",
    "//unistd_learn:setsid_test",

    "//stdio_learn:write_test",
    "//stdio_learn:getc_test",
    "//stdio_learn:fgets_test",
    # "//stdio_learn:fopen_test",
    "//stdio_learn:tmpfile_test",
    "//stdio_learn:fopen1_test",

    "//signal_learn:signal_test",
    "//signal_learn:signal1_test",
    "//signal_learn:sigaction_test",
    "//signal_learn:signal2_test",
    "//signal_learn:signal3_test",
    "//signal_learn:SIG_IGN_test",

    "//stat_learn:stat_test",
    "//stat_learn:stat1_test",
    "//stat_learn:chmod_test",
    "//stat_learn:futimens_test",
    "//stat_learn:umask_test",

    "//fcntl_learn:creat_test",
    "//fcntl_learn:fcntl_test",

    "//env_learn:env_test",
    "//sys_select_learn:select_test",

    "//dirent_learn:readdir_test",

    "//errno_learn:errno_learn",

    "//grammar:2",
    "//grammar:union_test",
    "//grammar:continue_test",

    "//sys_time_learn:gettimeofday_test"
  ]
}

