group("default"){
  deps = [
    "//APUE_learn/src:tcgetpgrp_tcsetpgrp",

    # "//dome/twemproxy:nc_conf",
    # "//dome/twemproxy/src/hashkit:nc_hashkit",

    "//liburing_learn:io_uring_test",

    # "//dome/remixdb:xdbdemo",
    # "//dome/remixdb:xdb",
    # "//dome/remixdb:wh",
    # "//dome/remixdb:sst",
    # "//dome/remixdb:lib",
    # "//dome/remixdb:kv",
    # "//dome/remixdb:blkio",

    "//dome/btree.c:test",

    "//dome/rbtree:rbtree_test",
    "//dome/config_parse:sds_test",
    "//dome/config_parse:main",

    "//dome/thread_pool:threadPoll_Main",

    "//dome/bplustree:bplustree_coverage",
    "//dome/bplustree:bplustree_demo",

    "//dome/murmurhash.c:test",
    "//dome/murmurhash.c:test1",

    "//dome/bloomd:runner",

    "//inih_learn:ini_parse_test",

    "//check_learn:ck_assert_test",

    "//sys_mman_learn:mmap_test",

    "//ioctl_learn:ioctl_test",

    "//execinfo_learn:backtrace_test",

    # "//redis_learn:redis",

    "//openssl_learn:SHA1_test",
    "//openssl_learn:AES_cbc_encrypt_test",
    "//openssl_learn:RSA_new_test",
    "//openssl_learn:SHA1_Init_test",
    "//openssl_learn:MD5_Init_test",
    "//curl_learn:test",

    "//mcheck_learn:mtrace_test",

    "//mqueue_learn:mq_unlink_test",
    "//mqueue_learn:mq_open_test",

    "//resolv_learn:res_ninit_test",

    "//raylib_learn/shapes:shapes_basic_shapes",

    "//sodium_learn:sodium_base642bin_test",
    "//sodium_learn:sodium_bin2base64_test",
    "//sodium_learn:crypto_aead_xchacha20poly1305_ietf_encrypt_detached_test",
    "//sodium_learn:crypto_aead_xchacha20poly1305_ietf_decrypt_detached_test",

    "//seccomp_learn:SECCOMP_MODE_STRICT_test",

    "//sched_learn:CLONE_NEWUSER_test",
    "//sched_learn:CLONE_NEWIPC_test",
    "//sched_learn:clone_test",

    # "//opengl_learn:test",

    "//stdint_learn:int32_t_test",

    "//time_learn:time_test",
    "//time_learn:clock_gettime_test",

    "//dome/asyn_network:main",

    "//DataStruct_learn/hash/simhash:test",
    "//DataStruct_learn/hash/hash_list:test",
    "//DataStruct_learn/List/Dlisthash:test",
    "//DataStruct_learn/List/skiplist:skiplist_test",
    "//DataStruct_learn/Tree/trie:test",
    "//DataStruct_learn/Tree/lsm-trie:mixed_test",
    "//DataStruct_learn/Tree/lsm-trie:cm_util",
    "//DataStruct_learn/Tree/lsm-trie:cmap_test",
    "//DataStruct_learn/Tree/lsm-trie:table_test",
    "//DataStruct_learn/Tree/lsm-trie:coding_test",
    "//DataStruct_learn/Tree/lsm-trie:bloom_test",
    "//DataStruct_learn/Tree/lsm-trie:mempool_test",
    "//DataStruct_learn/Tree/lsm-trie:io_util",
    "//DataStruct_learn/Tree/lsm-trie:debug_test",
    "//DataStruct_learn/Tree/lsm-trie:generator_test",
    "//DataStruct_learn/Tree/lsm-trie:rwlock_test",
    "//DataStruct_learn/Tree/btree:test",
    "//DataStruct_learn/Graph:bfs_queue",
    "//DataStruct_learn/Graph:bfs",
    "//DataStruct_learn/Graph:bellman_ford",
    "//DataStruct_learn/Heap/hashtable/listhash:test",
    "//DataStruct_learn/Queue/queue/list_queue:test",
    "//DataStruct_learn/Queue/queue/array_queue:test",
    "//DataStruct_learn/Queue/queue:ring_queue",
    "//DataStruct_learn/Tree/binarytree/avl_tree:test",
    "//DataStruct_learn/Array/dynamic_array:test",
    "//DataStruct_learn/Dict:test",
    "//DataStruct_learn/Array/array:array",
    "//DataStruct_learn/List/ELinkList:ELinkList-main",
    "//DataStruct_learn/List/DuLinkList:DuLinkList-main",
    "//DataStruct_learn/Array/SLinkList:SLinkList-main",
    "//DataStruct_learn/List/MergeList:MergeList-main",
    "//DataStruct_learn/List/LinkList:LinkList-main",
    "//DataStruct_learn/Array/MergeSqList:MergeSqList-main",
    "//DataStruct_learn/Array/Union:Union-main",
    "//DataStruct_learn/Array/SqArray:SqArray-main",
    "//DataStruct_learn/Heap/small_Heap:main",

    "//TCP-IP-NetworkNote_learn/ch18:chat_clnt",
    "//TCP-IP-NetworkNote_learn/ch18:chat_server",

    "//TCP-IP-NetworkNote_learn/ch17:echo_EPETserv",

    "//TCP-IP-NetworkNote_learn/ch15:echo_client",
    "//TCP-IP-NetworkNote_learn/ch15:echo_stdserv",

    "//TCP-IP-NetworkNote_learn/ch13:oob_send",
    "//TCP-IP-NetworkNote_learn/ch13:oob_recv",

    "//TCP-IP-NetworkNote_learn/ch10:echo_mpclient",
    "//TCP-IP-NetworkNote_learn/ch10:echo_mpserv",

    "//TCP-IP-NetworkNote_learn/ch09:get_buf",
    "//TCP-IP-NetworkNote_learn/ch09:set_buf",
    "//TCP-IP-NetworkNote_learn/ch09:sock_type",

    "//TCP-IP-NetworkNote_learn/ch07:file_client",
    "//TCP-IP-NetworkNote_learn/ch07:file_server",

    "//TCP-IP-NetworkNote_learn/ch06:uecho_client",
    "//TCP-IP-NetworkNote_learn/ch06:uecho_server",

    "//TCP-IP-NetworkNote_learn/ch04:hello_client",
    "//TCP-IP-NetworkNote_learn/ch04:hello_server",
    "//TCP-IP-NetworkNote_learn/ch04:echo_client",
    "//TCP-IP-NetworkNote_learn/ch04:echo_server",

    "//TCP-IP-NetworkNote_learn/ch03:endian_conv",
    "//TCP-IP-NetworkNote_learn/ch03:inet_addr",
    "//TCP-IP-NetworkNote_learn/ch03:inet_ntoa",
    "//TCP-IP-NetworkNote_learn/ch03:inet_aton",

    "//TCP-IP-NetworkNote_learn/ch02:tcp_NONBLACK_server",
    "//TCP-IP-NetworkNote_learn/ch02:tcp_server",
    "//TCP-IP-NetworkNote_learn/ch02:tcp_client",

    "//TCP-IP-NetworkNote_learn/ch01:fd_seri",
    "//TCP-IP-NetworkNote_learn/ch01:low_read",
    "//TCP-IP-NetworkNote_learn/ch01:low_open",
    "//TCP-IP-NetworkNote_learn/ch01:hello_server",
    "//TCP-IP-NetworkNote_learn/ch01:hello_client",

    "//sys_resource_learn:getrlimit",

    "//stdarg_learn:va_start_test",
    "//stdarg_learn:va_end_test",

    "//glob_learn:glob_test",

    "//sys_socket_learn:AF_LOCAL_test",
    "//sys_socket_learn:getsockopt_test",
    "//sys_socket_learn:sendmsg_test",
    "//sys_socket_learn:socketpair_test",

    "//sys_stat_learn:stat3_test",
    "//sys_stat_learn:stat2_test",
    "//sys_stat_learn:chmod_test",
    "//sys_stat_learn:futimens_test",
    "//sys_stat_learn:umask_test",
    "//sys_stat_learn:stat_test",
    "//sys_stat_learn:stat1_test",

    # "//net_learn/chap-5:tcp_server",
    # "//net_learn/chap-5:tcpclient",

    "//ucontext_learn:main_test",

    "//coroutine_learn:main",

    "//DesignPattern_learn/Proxy:ProxyPatternDemo",
    "//DesignPattern_learn/Builder:BuilderPatternDemo",
    "//DesignPattern_learn/Bridge:BridgePatternDemo",
    "//DesignPattern_learn/Adapter:AdapterPatternDemo",
    "//DesignPattern_learn/Abstract_Factory:AbstractFactoryPatternDemo",
    "//DesignPattern_learn/Factory_Pattern:FactoryPatternDemo",
    "//DesignPattern_learn/Singleton_Pattern:SingletonPatternDemo",
    "//DesignPattern_learn/libctools:test_memory_leak",
    "//DesignPattern_learn/libctools:test_list",

    "//leetcode_learn/001_two_sum:two_sum",
    "//leetcode_learn/037_sudoku_solver:sudoku_solver",

    "//sys_epoll_learn:test",

    "//netdb_learn:getnameinfo_test",
    "//netdb_learn:gethostbyaddr_test",
    "//netdb_learn:gethostbyname_test",
    "//netdb_learn:getaddrinfo_test",
    "//netdb_learn:getaddrinfo1_test",

    "//assert_learn:assert_test",

    "//arpa_inet_learn:inet_ntoa_test",
    "//arpa_inet_learn:inet_aton_test",
    "//arpa_inet_learn:inet_addr_test",
    "//arpa_inet_learn:inet_ntop_test",

    "//gcc_learn:__builtin_clz_test",

    "//aio_learn:aio_read_test",
    "//aio_learn:aio_write_test",
    "//aio_learn:aio_suspend_test",
    "//aio_learn:lio_listio_test",

    "//grammar_learn:sizeof_test",
    "//grammar_learn:pointer2_test",
    "//grammar_learn:static_test",
    "//grammar_learn:pointer_test",
    "//grammar_learn:pointer1_test",
    "//grammar_learn:bool_test",
    "//grammar_learn:2",
    "//grammar_learn:union_test",
    "//grammar_learn:continue_test",
    "//grammar_learn:do_while_test",
    "//grammar_learn:argv_test",
    "//grammar_learn/macro:define_test",
    "//grammar_learn:long_int_test",
    "//grammar_learn:1",
    "//grammar_learn:struct_test",

    "//sys_signalfd_learn:signalfd_test",

    # "//libev_learn/case:ev1_test",
    # "//libev_learn/case:ev_signal_test",

    "//pthread_learn:pthread_create3_test",
    "//pthread_learn:pthread_cond_broadcast_test",
    "//pthread_learn:pthread_attr_init_test",
    "//pthread_learn:pthread_cond_init_test",
    "//pthread_learn:pthread_getspecific_test",
    "//pthread_learn:pthread_self_test",
    "//pthread_learn:pthread_mutex_lock_test",
    "//pthread_learn:pthread_once_test",

    "//locale_learn:LC_COLLATE_test",
    "//locale_learn:setlocale_test",

    "//sys_wait_learn:waitpid_test",

    "//setjmp_learn:setjmp_test",
    "//setjmp_learn:longjmp_test",

    "//utsname_learn:uname_test",


    "//pwd_learn:getpwent_test",

    "//shadow_learn:getspnam_test",

    "//string_learn:strlen_test",
    "//string_learn:strcoll_test",
    "//string_learn:strstr_test",
    "//string_learn:strtok_test",
    "//string_learn:strcmp_test",
    "//string_learn:strcat_test",
    "//string_learn:strerror_test",
    "//string_learn:memset_test",
    "//string_learn:memmove_test",
    "//string_learn:memcpy_test",

    "//strings_learn:strcasecmp_test",

    "//stdlib_learn:aligned_alloc_test",
    "//stdlib_learn:qsort_test",
    "//stdlib_learn:srandom_test",
    "//stdlib_learn:setenv_test",
    "//stdlib_learn:WIFSIGNALED_test",
    "//stdlib_learn:WEXITSTATUS_test",
    "//stdlib_learn:WIFEXITED_test",
    "//stdlib_learn:atoi_test",
    "//stdlib_learn:free_test",
    "//stdlib_learn:getenv_test",
    "//stdlib_learn:mkstemp_test",
    "//stdlib_learn:atexit_test",
    "//stdlib_learn:system_test",
    "//stdlib_learn:system3_test",
    "//stdlib_learn:srand_test",
    "//stdlib_learn:calloc_test",
    "//stdlib_learn:malloc_test",
    "//stdlib_learn:realloc_test",

    "//unistd_learn:gethostname_test",
    "//unistd_learn:ftruncate_test",
    "//unistd_learn:pathconf_test",
    "//unistd_learn:getcwd_test",
    "//unistd_learn:pipe_test",
    "//unistd_learn:lockf_test",
    "//unistd_learn:getopt_test",
    "//unistd_learn:getppid_test",
    "//unistd_learn:crypt_test",
    "//unistd_learn:getspnam_test",
    "//unistd_learn:getpass_test",
    "//unistd_learn:write_test",
    "//unistd_learn:dup2_test",
    "//unistd_learn:dup_test",
    "//unistd_learn:fork5_test",
    "//unistd_learn:sleep_test1",
    "//unistd_learn:sleep_test",
    "//unistd_learn:getpid_test",
    "//unistd_learn:read_test",
    "//unistd_learn:getuid_test",
    "//unistd_learn:lseek_test",
    "//unistd_learn:lseek1_test",
    "//unistd_learn:access_test",
    "//unistd_learn:chdir_test",
    "//unistd_learn:unlink_test",
    "//unistd_learn:fork1_test",
    "//unistd_learn:execlp_test",
    "//unistd_learn:execl_test",
    # "//unistd_learn:getcwd_test",
    "//unistd_learn:fork4_test",
    "//unistd_learn:setsid_test",

    "//stdio_learn:fgets1_test",
    "//stdio_learn:strtoul_test",
    "//stdio_learn:strtol_test",
    "//stdio_learn:snprintf_test",
    "//stdio_learn:getchar_test",
    "//stdio_learn:putchar_test",
    "//stdio_learn:fwrite_test",
    "//stdio_learn:fdopen_test",
    "//stdio_learn:fileno_test",
    "//stdio_learn:getline_test",
    "//stdio_learn:fflush_test",
    "//stdio_learn:fseek_test",
    "//stdio_learn:sprintf_test",
    "//stdio_learn:write_test",
    "//stdio_learn:getc_test",
    "//stdio_learn:fgets_test",
    "//stdio_learn:fopen_test",
    "//stdio_learn:tmpfile_test",
    "//stdio_learn:fopen1_test",
    "//stdio_learn:fgetc_test",
    "//stdio_learn:fread_test",

    "//signal_learn:raise_test",
    "//signal_learn:sigprocmask_test",
    "//signal_learn:kill_test",
    "//signal_learn:sigemptyset_test",
    "//signal_learn:signal4_test",
    "//signal_learn:signal_test",
    "//signal_learn:signal1_test",
    "//signal_learn:sigaction_test",
    "//signal_learn:signal2_test",
    "//signal_learn:signal3_test",
    "//signal_learn:SIG_IGN_test",
    "//signal_learn:SIGFPE_test",

    "//fcntl_learn:fcntl_F_WRLCK_test",
    "//fcntl_learn:splice1_test",
    "//fcntl_learn:splice_test",
    "//fcntl_learn:file_flags",
    "//fcntl_learn:open_test",
    "//fcntl_learn:creat_test",
    "//fcntl_learn:fcntl_test",

    "//env_learn:env_test",

    "//sys_select_learn:select1_test",
    "//sys_select_learn:select_test",

    "//dirent_learn:readdir_test",

    "//errno_learn:errno_learn",

    "//sys_time_learn:localtime2_test",
    "//sys_time_learn:localtime1_test",
    "//sys_time_learn:localtime_test",
    "//sys_time_learn:time_test",
    "//sys_time_learn:clock_gettime_test",
    "//sys_time_learn:gettimeofday2_test",
    "//sys_time_learn:gettimeofday1_test",
    "//sys_time_learn:gettimeofday_test",

    "//sys_uio_learn:writev_test",
    "//sys_uio_learn:readv_test",

    "//semaphore_learn:sem_destroy_test",

    "//ctype_learn:tolower_test",
    "//ctype_learn:isspace_test",
  ]
}

