executable("lio_listio_test") {
  cflags = ["-g"]
  sources = [ "lio_listio_test.c" ]
}

executable("aio_suspend_test") {
  cflags = ["-g"]
  sources = [ "aio_suspend_test.c" ]
}

executable("aio_write_test") {
  cflags = ["-g"]
  sources = [ "aio_write_test.c" ]
}

executable("aio_read_test") {
  cflags = ["-g"]
  sources = [ "aio_read_test.c" ]
}
