executable("file_flags") {
  cflags = ["-g"]

  sources = [
    "file_flags.c",
  ]
}

executable("open_test") {
  cflags = ["-g"]

  sources = [
    "open_test.c",
  ]
}

executable("creat_test") {
  cflags = ["-g"]

  sources = [
    "creat_test.c",
  ]
}

executable("fcntl_test") {
  cflags = ["-g"]

  sources = [
    "fcntl_test.c",
  ]
}
