executable("splice1_test") {
  cflags = ["-g"]

  sources = [
    "splice1_test.c",
  ]
}

executable("fcntl_F_WRLCK_test") {
  cflags = ["-g"]

  sources = [
    "fcntl_F_WRLCK_test.c",
  ]
}

executable("splice_test") {
  cflags = ["-g"]

  sources = [
    "splice_test.c",
  ]
}

executable("file_flags") {
  cflags = ["-g"]

  sources = [
    "file_flags.c",
  ]
}

executable("open_test") {
  cflags = ["-g"]

  sources = [
    "open_test.c",
  ]
}

executable("creat_test") {
  cflags = ["-g"]

  sources = [
    "creat_test.c",
  ]
}

executable("fcntl_test") {
  cflags = ["-g"]

  sources = [
    "fcntl_test.c",
  ]
}
