executable("fallocate_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fallocate_test.c",
  ]
}

executable("splice1_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "splice1_test.c",
  ]
}

executable("fcntl_F_WRLCK_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fcntl_F_WRLCK_test.c",
  ]
}

executable("splice_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "splice_test.c",
  ]
}

executable("file_flags") {
  cflags = ["-g", "-Wall"]

  sources = [
    "file_flags.c",
  ]
}

executable("open_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "open_test.c",
  ]
}

executable("creat_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "creat_test.c",
  ]
}

executable("fcntl_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fcntl_test.c",
  ]
}
