# sudo apt install libfuse3-dev
# pkg-config fuse3 --cflags --libs
executable("hello") {
  cflags = ["-g", "-Wall", "-L/usr/local/lib/x86_64-linux-gnu"]
  include_dirs = ["/usr/local/include/fuse3"]
  libs = ["fuse3", "pthread"]

  sources = [
    "hello.c",
  ]
}


# executable("hello_ll_uds") {
#   cflags = ["-g", "-Wall", "-L/usr/local/lib/x86_64-linux-gnu"]
# # include_dirs = ["/usr/local/include/fuse3"]
#   libs = ["fuse3", "pthread"]

#   sources = [
#     "hello_ll_uds.c",
#   ]
# }
