executable("__builtin_clz_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "__builtin_clz_test.c" ]
}

executable("__builtin_offsetof_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "__builtin_offsetof_test.c" ]
}

executable("inline_main") {
  cflags = ["-g", "-Wall", "-fno-inline"]
  sources = [ "inline_main.c" ]
}
