executable("static_test") {
  cflags = ["-g"]

  sources = [
    "static_test.c",
  ]
}

executable("pointer_test") {
  cflags = ["-g"]

  sources = [
    "pointer_test.c",
  ]
}

executable("define_test") {
  sources = [
    "define_test.c",
  ]
}

executable("bool_test") {
  sources = [
    "bool_test.c",
  ]
}

executable("argv_test") {
  sources = [
    "argv_test.c",
  ]
}

executable("struct_test") {
  sources = [
    "struct_test.c",
  ]
}

executable("1") {
  sources = [
    "1.c",
  ]
}

executable("long_int_test") {
  sources = [
    "long_int_test.c",
  ]
}

executable("do_while_test") {
  sources = [
    "do_while_test.c",
  ]
}

executable("continue_test") {
  sources = [
    "continue_test.c",
  ]
}

executable("union_test") {
  sources = [
    "union_test.c",
  ]
}

executable("2") {
  sources = [
    "2.c",
  ]
}
