executable("const_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "const_test.c",
  ]
}

executable("arr_prt_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "arr_prt_test.c",
  ]
}

executable("pointer3_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "pointer3_test.c",
  ]
}

executable("int_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "int_test.c",
  ]
}

executable("define_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "define_test.c",
  ]
}

executable("sizeof_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "sizeof_test.c",
  ]
}

executable("static_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "static_test.c",
  ]
}

executable("pointer2_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "pointer2_test.c",
  ]
}

executable("pointer1_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "pointer1_test.c",
  ]
}

executable("pointer_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "pointer_test.c",
  ]
}

executable("bool_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "bool_test.c",
  ]
}

executable("argv_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "argv_test.c",
  ]
}

executable("struct_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "struct_test.c",
  ]
}

executable("1") {
  cflags = ["-g", "-Wall"]
  sources = [
    "1.c",
  ]
}

executable("long_int_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "long_int_test.c",
  ]
}

executable("do_while_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "do_while_test.c",
  ]
}

executable("continue_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "continue_test.c",
  ]
}

executable("union_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "union_test.c",
  ]
}

executable("2") {
  cflags = ["-g", "-Wall"]
  sources = [
    "2.c",
  ]
}
