# sudo apt install libudev-dev
executable("udev_new_test") {
  cflags = ["-g", "-Wall"]
  libs = ["udev"]
  sources = [
    "udev_new_test.c",
  ]
}

executable("udev_enumerate_scan_devices_test") {
  cflags = ["-g", "-Wall"]
  libs = ["udev"]
  sources = [
    "udev_enumerate_scan_devices_test.c",
  ]
}
