executable("getnameinfo_test") {
  sources = ["getnameinfo_test.c"]
}

executable("gethostbyaddr_test") {
  sources = ["gethostbyaddr_test.c"]
}

executable("gethostbyname_test") {
  sources = ["gethostbyname_test.c"]
}

executable("getaddrinfo_test") {
  sources = ["getaddrinfo_test.c"]
}

executable("getaddrinfo1_test") {
  sources = ["getaddrinfo1_test.c"]
}
