executable("getnameinfo_test") {
  cflags = ["-g"]
  sources = ["getnameinfo_test.c"]
}

executable("gethostbyaddr_test") {
  cflags = ["-g"]
  sources = ["gethostbyaddr_test.c"]
}

executable("gethostbyname_test") {
  cflags = ["-g"]
  sources = ["gethostbyname_test.c"]
}

executable("getaddrinfo_test") {
  cflags = ["-g"]
  sources = ["getaddrinfo_test.c"]
}

executable("getaddrinfo1_test") {
  cflags = ["-g"]
  sources = ["getaddrinfo1_test.c"]
}
