static_library("lib") {
  sources = [
    # "log.c",
    # "read.c",
    # "utils.c",
    # "buffer.c",
    # "channel.c",
    # "acceptor.c",
    # "sock_ntop.c",
    # "event_loop.c",
    # "tcp_client.c",
    # "tcp_server.c",
    # "channel_map.c",
    # "http_server.c",
    # "thread_pool.c",
    # "http_request.c",
    # "http_response.c",
    "tcp_connection.c",
    # "poll_dispatcher.c",
    # "epoll_dispatcher.c",
    # "event_loop_thread.c",
  ]

  include_dirs = ["//netinclude"]
}
