executable("MD5_Init_test") {
  ldflags = ["-lcrypto"]
  sources = ["MD5_Init_test.c"]
}

executable("SHA_Init_test") {
  ldflags = ["-lcrypto"]
  sources = ["SHA_Init_test.c"]
}

executable("RSA_new_test") {
  ldflags = ["-lcrypto"]
  sources = ["RSA_new_test.c"]
}

executable("AES_cbc_encrypt_test") {
  ldflags = ["-lcrypto"]
  sources = ["AES_cbc_encrypt_test.c"]
}
