executable("pthread_cond_broadcast_test") {
  sources = [
    "pthread_cond_broadcast_test.c",
  ]
}

executable("pthread_attr_init_test") {
  sources = [
    "pthread_attr_init_test.c",
  ]
}

executable("pthread_cond_init_test") {
  sources = [
    "pthread_cond_init_test.c",
  ]
}

executable("pthread_getspecific_test") {
  sources = [
    "pthread_getspecific_test.c",
  ]
}

executable("pthread_self_test") {
  sources = [
    "pthread_self_test.c",
  ]
}

executable("pthread_once_test") {
  sources = [
    "pthread_once_test.c",
  ]
}

executable("pthread_mutex_lock_test") {
  sources = [
    "pthread_mutex_lock_test.c",
  ]
}

