executable("pthread_create3_test") {
  cflags = ["-g"]
  sources = [
    "pthread_create3_test.c",
  ]
}

executable("pthread_cond_broadcast_test") {
  cflags = ["-g"]
  sources = [
    "pthread_cond_broadcast_test.c",
  ]
}

executable("pthread_attr_init_test") {
  cflags = ["-g"]
  sources = [
    "pthread_attr_init_test.c",
  ]
}

executable("pthread_cond_init_test") {
  cflags = ["-g"]
  sources = [
    "pthread_cond_init_test.c",
  ]
}

executable("pthread_getspecific_test") {
  cflags = ["-g"]
  sources = [
    "pthread_getspecific_test.c",
  ]
}

executable("pthread_self_test") {
  cflags = ["-g"]
  sources = [
    "pthread_self_test.c",
  ]
}

executable("pthread_once_test") {
  cflags = ["-g"]
  sources = [
    "pthread_once_test.c",
  ]
}

executable("pthread_mutex_lock_test") {
  cflags = ["-g"]
  sources = [
    "pthread_mutex_lock_test.c",
  ]
}

