group("redis"){
  deps = [
    "src:util",
    "src:dict",
    "src:redis-check-dump",
    "src:redis-check-aof",
    "src:redis-cli",
    "src:redis-benchmark",

    "src:adlist",
    "src:anet",
    "src:zmalloc",
    "src:zipmap",
    "src:sds",
    "src:sha1",
    "src:release",
    "src:intset",
    "src:memtest",
    "src:lzf_d",
    "src:lzf_c",
    "src:crc64",
    "src:rand",
    "src:t_set",
    "src:aof",
    "src:bio",
    "src:bitops",
    "src:blocked",
    "src:cluster",
    "src:config",
    "src:crc16",
    "src:db",
    "src:endianconv",
    "src:debug",
    "src:hyperloglog",
    "src:multi",
    "src:networking",
    "src:notify",
    "src:object",
    "src:pubsub",
    "src:pqsort",
    "src:setproctitle",
    "src:scripting",
    "src:sentinel",
    "src:slowlog",
    "src:sort",
    "src:syncio",
    "src:t_hash",
    "src:t_list",
    "src:t_string",
    "src:t_zset",
    "src:rdb",
    "src:redis",
    "src:ziplist",
    "src:ae_epoll",
    "src:ae",
    "src:replication",
    "src:ae_select",
    ## evport是Solaris 10当中提供的io多路复用机制
    # "src:ae_evport",
    ## kqueue是FreeBSD当中提供的io多路复用机制
    # "src:ae_kqueue",
  ]
}


