executable("clone_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "clone_test.c",
  ]
}

executable("CLONE_NEWIPC_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "CLONE_NEWIPC_test.c",
  ]
}

executable("CLONE_NEWPID_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "CLONE_NEWPID_test.c",
  ]
}

executable("CLONE_NEWUSER_test") {
  cflags = ["-g", "-Wall"]

  ldflags = ["-lcap"]

  sources = [
    "CLONE_NEWUSER_test.c",
  ]
}
