executable("sigprocmask_test") {
  sources = ["sigprocmask_test.c"]
}

executable("kill_test") {
  sources = ["kill_test.c"]
}

executable("sigemptyset_test") {
  sources = ["sigemptyset_test.c"]
}

executable("signal4_test") {
  sources = ["signal4_test.c"]
}

executable("SIGFPE_test") {
  sources = ["SIGFPE_test.c"]
}

executable("SIG_IGN_test") {
  sources = ["SIG_IGN_test.c"]
}

executable("signal3_test") {
  cflags = ["-g"]

  sources = [
    "signal3_test.c",
  ]
}

executable("signal2_test") {
  cflags = ["-g"]

  sources = [
    "signal2_test.c",
  ]
}

executable("sigaction_test") {
  cflags = ["-g"]

  sources = [
    "sigaction_test.c",
  ]
}

executable("signal1_test") {
  cflags = ["-g"]

  sources = [
    "signal1_test.c",
  ]
}

executable("signal_test") {
  cflags = ["-g"]

  sources = [
    "signal_test.c",
  ]
}
